plugins {
    id 'org.springframework.boot' version '2.5.0-SNAPSHOT'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'com.austinzhu'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '16'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

compileJava {
    options.forkOptions.jvmArgs.addAll([
            "--enable-preview",
            "-Xlint:all",
            "-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
            "-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
            "-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
            "-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
            "-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
            "-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
            "-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
            "-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
            "-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
            "-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED"
    ])
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-integration'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.integration:spring-integration-webflux'
    implementation 'org.springframework.integration:spring-integration-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.integration:spring-integration-test'
}

test {
    useJUnitPlatform()
}
